--- a/spring-boot-thymeleaf/src/main/resources/application.yml
+++ b/spring-boot-thymeleaf/src/main/resources/application.yml
@@ -16,6 +16,11 @@ spring:
     username: sa
     password:
     url: jdbc:h2:~/.h2/arukas
+  h2:
+    console:
+      path: /h2-console
+      settings:
+        web-allow-others: true # 允许远程访问
 server:
   port: 4200
 logging:
